package Enums;

public enum ImpreciseTime {
    Morning,
    Afternoon,
    Evening,
    Night
}
